Fix the accordion tiles on tablet and desktop breakpoint so they are aligned with other tiles in the page. (#296)

--- a/src/theme/css/frontend/_tile.scss
+++ b/src/theme/css/frontend/_tile.scss
@@ -41,7 +41,16 @@
 	}
 
 	.tile-grid-container {
-	  @apply text-left gap-y-0 bg-white md:grid md:grid-cols-2 md:gap-7 md:bg-transparent lg:grid-cols-3;
+	  @apply text-left gap-y-0 bg-white md:grid md:grid-cols-2 md:gap-7 md:bg-transparent;
+		@apply justify-center;
+
+		@screen lg {
+			grid-template-columns: repeat(2, minmax(0, rem-calc(355px)));
+		}
+
+		@screen xl {
+			grid-template-columns: repeat(3, minmax(0, rem-calc(395px)));
+		}
 	}
   }
 
